<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Compass</string>
    <string name="cannot_get_location">--</string>
    <string name="location_north">NL</string>
    <string name="location_south">SL</string>
    <string name="location_east">EL</string>
    <string name="location_west">WL</string>
    <string name="calibrate_success">Calibrated</string>
    <string name="calibrate_failed_no_location">"Can't calibrate"</string>
    <string name="calibrate_failed_timeout">"Can't connect to the server"</string>
    <string name="calibrate_failed">Calibrating altitude failed</string>
    <string name="pressure_title">Pressure</string>
    <string name="altitude_title">Altitude</string>
    <string name="pressure">%.1f</string>
    <string name="altitude">%.1f</string>
    <string name="pressure_unit">hPa</string>
    <string name="altitude_unit">M</string>
    <string name="dialog_title_no_network">Turn on Network</string>
    <string name="dialog_body_no_network">"Can't connect to network"</string>
    <string name="dialog_calibrat_altitude">Calibrating…</string>
    <string name="latitude">LAT</string>
    <string name="longitude">LON</string>
    <string name="direction_north">N</string>
    <string name="direction_south">S</string>
    <string name="direction_east">E</string>
    <string name="direction_west">W</string>
    <string name="direction_north_east">NE</string>
    <string name="direction_north_west">NW</string>
    <string name="direction_south_east">SE</string>
    <string name="direction_south_west">SW</string>
    <string name="guide_toast">To calibrate, move your phone in the motion below.</string>
    <string name="mobiledata_alert_dialog_title">Data usage warning</string>
    <string name="mobiledata_alert_dialog_message">Connect to the internet to calibrate altitude?</string>
    <string name="do_not_show_next_time">"Don't show again"</string>
    <string name="location_not_enabled_title">Location services</string>
    <string name="location_not_enabled_summary">Directory needs your location info to work normally.</string>
    <string name="location_enable">Allow</string>
    <string name="location_enable_later">Later</string>
    <string name="location_enabled">You can turn off location services any time in Settings.</string>
    <string name="first_using_dialog_title">Access permission</string>
    <string name="first_using_dialog_message">"Compass needs to use your device's network connection, camera, and location services to work normally."</string>
    <string name="using_camera_confirm_ok">Agree</string>
    <string name="using_camera_confirm_cancel">Quit</string>
    <string name="shake_enter_tip">Shake to calibrate</string>
    <string name="calibrate_title">Calibrate compass</string>
    <string name="calibrate_tip">Tilt your device to roll the ball around the circle</string>
    <string name="calibrate_rotate_again">Try again</string>
    <string name="error_camera_unavailable_title">Camera unavailable</string>
    <string name="error_camera_unavailable">Check if another app is currently using Camera.</string>
    <string name="altitude_uncalibrate_tip">"Can't calibrate altitude"</string>
    <string name="altitude_uncalibrate_msg">"Can't calibrate altitude accurately without GPS or mobile data connection."</string>
    <string name="altitude_uncalibrate_refresh">Try again</string>
    <string name="altitude_uncalibrate_cancel">Cancel</string>
</resources>
