<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.miui.compass.CameraView android:id="@id/camera_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:id="@id/camera_mask" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <miui.widget.ScreenView android:id="@id/scv_screen" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.miui.compass.CompassScreen android:id="@id/compass_screen" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/lyt_tutorial" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="20.0sp" android:textColor="#99ffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guide_toast" />
                    <ImageView android:id="@id/img_tutorial" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" />
                    <TextView android:layout_gravity="center" android:id="@id/shake_enter_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shake_enter_tip" />
                </LinearLayout>
                <RelativeLayout android:id="@id/tilt_rotate_view_layout" android:background="@drawable/shape_rotate_view_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="@dimen/calibrate_title_text_size" android:textColor="@color/calibrate_title_color" android:id="@id/tv_tilt_rotate_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/direction_margin_top" android:text="@string/calibrate_title" android:layout_centerHorizontal="true" />
                    <com.miui.compass.RotateView android:id="@id/img_tilt_rotate" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    <TextView android:textSize="@dimen/calibrate_tip_text_size" android:textColor="@color/calibrate_tip_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/calibrate_tip_bottom_margin" android:text="@string/calibrate_tip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
                </RelativeLayout>
            </FrameLayout>
            <com.miui.compass.GradienterScreen android:id="@id/gradienter_screen" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </miui.widget.ScreenView>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:background="@drawable/divider_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.299988dip" android:layout_marginRight="23.299988dip" android:layout_marginBottom="23.699982dip" />
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/bottom_unit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="28.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_bottom_unit_title" android:layout_gravity="center_horizontal" android:id="@id/textview_location_latitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/latitude" />
                    <TextView android:textSize="@dimen/text_size_bottom_unit_value" android:textColor="@android:color/white" android:layout_gravity="center|top" android:id="@id/textview_location_latitude_degree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cannot_get_location" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_bottom_unit_title" android:layout_gravity="center_horizontal" android:id="@id/textview_location_longitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longitude" />
                    <TextView android:textSize="@dimen/text_size_bottom_unit_value" android:textColor="@android:color/white" android:layout_gravity="center|top" android:id="@id/textview_location_longitude_degree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cannot_get_location" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/bottom_unit_pressure" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_bottom_unit_title" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pressure_title" />
                    <TextView android:textSize="@dimen/text_size_bottom_unit_value" android:textColor="@android:color/white" android:layout_gravity="center|top" android:id="@id/textview_pressure" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/bottom_unit_altitude" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="@dimen/text_size_bottom_unit_title" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/altitude_title" />
                    <LinearLayout android:layout_gravity="center|top" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="@dimen/text_size_bottom_unit_value" android:textColor="@android:color/white" android:id="@id/textview_altitude" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                        <ImageView android:layout_gravity="center" android:id="@id/tip_altitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/status_bar_blur" android:background="@android:drawable/screen_background_dark_transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>